Node_Package/Node_lg_groundtruth_data_ws/lg_groundtruth_data_ws/src/log/build_2021-01-07_13-38-45/lg_sub_groundtruth/stderr.log
  File "/home/acclivis_linux2/script/lg_groundtruth_data_ws/src/install/lg_sub_groundtruth/lib/python3.6/site-packages/lg_sub_groundtruth/lg_gt3d_subscriber.py", line 45
    print("lg :"lgstamp)
                      ^
SyntaxError: invalid syntax

